# Ferrum-3d

./: Cargo.toml  README.md
crates/ferrum_app/: Cargo.toml
crates/ferrum_app/src/: app.rs  main.rs  update.rs
crates/ferrum_collision/: Cargo.toml
crates/ferrum_collision/src/: gjk.rs
crates/ferrum_core/: Cargo.toml
crates/ferrum_core/src/: constants.rs  dormand_prince.rs  lib.rs  math.rs  rk4.rs  time.rs  timing.rs
crates/ferrum_core/src/integrators/: mod.rs  rk4.rs
crates/ferrum_physics/: Cargo.toml  rigidbody.rs  update.rs
crates/ferrum_physics/src/: collision.rs  energy.rs  gravity.rs  init.rs  integration.rs  lib.rs  mass_properties.rs  physics_vertex.rs  polyhedron.rs  rigidbody.rs  rigidbody_set.rs  rigidbodybuilder.rs  update.rs
crates/ferrum_render/: Cargo.toml
crates/ferrum_render/res/: blender_cube.mtl  cow.mtl  cube.mtl
crates/ferrum_render/shader/: shader.wgsl
crates/ferrum_render/src/: camera.rs  input.rs  instance.rs  lib.rs  model.rs  render.rs  resources.rs  texture.rs  update.rs
crates/ferrum_render/src/arrows/: arrows.rs  mod.rs
crates/ferrum_render/src/gui/: create_gui.rs  egui_tools.rs  mod.rs
res/: arrow.mtl  bunny.mtl  corkscrew.mtl  icosa.mtl  monkey.mtl  sphere.mtl
shader/: shader.wgsl
src/: camera.rs  lib.rs  main.rs  resources.rs  texture.rs
