[workspace]
members = [
    "crates/ferrum_core",
    "crates/ferrum_physics",
    "crates/ferrum_render",
    "crates/ferrum_app",
    "crates/ferrum_collision",
]
resolver = "2"

[workspace.dependencies]
glam     = { version = "0.32.1", features = ["bytemuck"] }
bytemuck = { version = "1.24",  features = ["derive"] }
anyhow     = "1.0"

egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"

env_logger = "0.11.9"
pollster   = "0.4.0"
log        = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async", "reordering"]}
rand = "0.10.0"

# assets
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }

# internal crates
ferrum_core      = { path = "crates/ferrum_core", features = ["f64"] }
ferrum_physics   = { path = "crates/ferrum_physics" }
ferrum_render    = { path = "crates/ferrum_render" }
ferrum_collision = { path = "crates/ferrum_collision" }