[package]
name    = "ferrum_app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
# ferrum_core = { workspace = true }
# ferrum_physics = { workspace = true }
ferrum_render  = { workspace = true }

# glam       = { workspace = true }
# wgpu       = { workspace = true }
# winit      = { workspace = true }
# pollster   = { workspace = true }
# anyhow     = { workspace = true }
# egui       = { workspace = true }
# egui-wgpu  = { workspace = true }
# egui-winit = { workspace = true }
# log        = { workspace = true }
# env_logger = { workspace = true }