[package]
name = "ferrum_render"
version = "0.1.0"
edition = "2018"

[dependencies]
ferrum_core    = { workspace = true }
#ferrum_physics = { workspace = true }

anyhow   = { workspace = true }
bytemuck = { workspace = true }
glam     = { workspace = true }
env_logger = "0.10"
pollster = "0.3"
log      = { workspace = true }
tobj     = { workspace = true }
wgpu     = { workspace = true }
winit    = { workspace = true }
image    = { workspace = true }