[package]
name = "ferrum_render"
version = "0.1.0"
edition = "2018"

[dependencies]
ferrum_core    = { workspace = true }
ferrum_physics = { workspace = true }

anyhow     = { workspace = true }
bytemuck   = { workspace = true }
glam       = { workspace = true }
tobj       = { workspace = true }
image      = { workspace = true }
rand       = { workspace = true}
egui       = { workspace = true }
egui-wgpu  = { workspace = true }
egui-winit = { workspace = true }